# Assembly

./: .gitignore  README.md  escrita.doc
Assembly/basics/: hello.asm  newhello  newhello.asm  print_rax.asm
C/: Tradução Computer Programming  Tradução Computer Programming.doc  fib  fib.asm  fib.c  fib.go  sockaddr_in.cpp  teste.c
C/exercices/: a.out  first  first.c  second  second.c
Filosofia/: 28102020.txt  Thougs
Java/AgendaDeObjetivos/: .project
Java/BaralhoCarta/: build.xml
Java/ExercicioLacos/: .project
Java/JogoDasCanoas/: build.xml
Java/Stoya/: .project  build.xml
Java/joshuaAC3/: build.xml
JavaScript/: arrays.js  functions.js  index.html  index.js  something.html
JavaScript/funthings/: index.js
PowerShell/: NetIP.ps1  auxiliar.ps1  gettingThePositiveNumber.ps1  ipRangeFilter.ps1  ip_range.ps1  ping_script.ps1  rascunho.ps1  xmlGenerator.ps1
Python/: call.py  chatbot.py  fileScript.py  guessingGame.py  hello.py  jlcp.py  list.py  listB.py  listC.py  listD.py  manyCats.py  o_to_100.py  regexTest.py  webScrapper.py  while.py
Python/Python_Network/: UDP_client.py  (+3 more)
Regex/: teste.txt
Rust/test/rust_crawler/: Cargo.toml
Shell/: abre_abas  animation.sh  backup.sh  clean_pictures  narnia  outro.bash  ryu  testecompletion
Trilha/: escrita.doc  trilha  trilha escrita
estudo/: 1  Categoria_de_Ataques  Certificações  Conduzindo_um_Ataque  Escrevendo_uma_Proposta  Fases_de_Um_Ataque  Introdução  Metodologias_Existentes  Tipos_de_Pentest  padrões_e_normas
openstack/: Vagrantfile
opentest/: Vagrantfile
teste/: package-lock.json
(+548 files in other folders)
